added single product spec and fixed allproduct spec

--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "start": "node server",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & npm run start-server",
     "start-server": "nodemon server -e html,js,scss --ignore public",
-    "test": "NODE_ENV='test' DATABASE_URL='postgres://localhost:5432/grace_shopper' mocha ./server/**/*.spec.js ./server/**/**/*.spec.js ./client/**/*.spec.js --compilers js:babel-register --require babel-polyfill"
+    "test": "NODE_ENV='test' DATABASE_URL='postgres://localhost:5432/grace_shopper' mocha ./server/**/*.spec.js ./server/**/**/*.spec.js ./client/**/*.spec.js --compilers js:babel-register --require babel-polyfill --watch"
   },
   "author": "",
   "license": "ISC",
   "setupTestFrameworkScriptFile": "./enzymeSetup",
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.16.1",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
