--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react": "^7.4.0",
     "install": "^0.10.2",
     "mocha": "^3.3.0",
+    "nodemailer": "^4.4.1",
     "nodemon": "^1.12.1",
     "npm": "^5.6.0",
     "react-test-renderer": "^16.0.0",
